# VisualFusion_libtorch

./: README.md
IR_Convert_v21_libtorch/: CMakeLists.txt  README.md  main.cpp
IR_Convert_v21_libtorch/config/: config.json
IR_Convert_v21_libtorch/lib_image_fusion/include/: core_image_align_libtorch.h  core_image_fusion.h  core_image_perspective.h  core_image_resizer.h  core_image_to_gray.h
IR_Convert_v21_libtorch/lib_image_fusion/src/: core_image_align_libtorch.cpp  core_image_align_libtorch_bk_local_global.cpp  core_image_align_libtorch_bk_local_global_cv.cpp  core_image_align_libtorch_bk_local_mean.cpp  core_image_fusion.cpp  core_image_perspective.cpp  core_image_resizer.cpp  core_image_to_gray.cpp
IR_Convert_v21_libtorch/utils/include/: util_timer.h
IR_Convert_v21_libtorch/utils/src/: util_timer.cpp
convert_to_libtorch/: export_to_jit.py  export_to_jit_fp16.py  export_to_onnx.py  export_to_onnx_fp16.py  export_to_onnx_tensorrt.py  export_to_trace.py
convert_to_libtorch/model_jit/: SemLA.py  reg.py  utils.py
